# assorted

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: Dockerfile  main.py
app/alembic/: env.py
app/alembic/versions/: 29f111fc6764_add_image_table.py  400ae6f28ca4_update_image_table.py  693c6b316645_update_image_nullable_for_album_table.py  ad0a6261a40e_update_image_nullable_for_album_table.py  e84685f57b21_create_album.py  fa412bf2107c_create_album_table.py
app/api/: deps.py  main.py
app/api/router/: albums.py  images.py  system.py
app/core/: config.py  db.py
app/models/: __init__.py  album.py  images.py
app/models.py/: images.py
